2007-07-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Signature/SignatureReader.cs:
		Better handling of the sentil in the varargs methods.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/SentinelType.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Fix handling of varargs methods.

2007-07-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Deal with non-sense instructions that some
		obfuscators emit.

	* Mono.Cecil/AggressiveReflectionReader.cs:
		Deal with out of range properties.
	* Mono.Cecil.Metadata/StringsHeap.cs:
		Deal with out of range string indexes.

2007-07-17  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AggressiveReflectionReader.cs:
		Add some gards against zeroed tokens.

	* Mono.Cecil.Metadata/Utilities.cs:
		Return zero instead of throwing on invalid tags.
		Allow Cecil to read assemblies partially broken
		by some obfuscators.

2007-07-14  Gert Driesen  <drieseng@users.sourceforge.net>

	* default.build: Fix relative path to key. Avoid use of ugly foreach
	contruct. Spaces to tabs.
	* Mono.Cecil.csproj: Fix relative path to key.
	* standalone.make: Fix relative path to key and config.make.

2007-07-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Expose a way to add default directories
		where the assemblies are first looked for.

2007-06-20  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/IReferenceImporter.cs => IImporter.cs
	  Mono.Cecil/DefaultReferenceImporter.cs => DefaultImporter.cs

	* Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/DefaultReferenceImporter.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Move Cecil types import logic into
		the DefaultReferenceImporter.

		Needed by the merger and the extractor.

2007-06-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/MethodBody.cs:
		Avoid invalid cast by properly simplifying
		instructions.
